# social-software-engineering

./: .gitignore  Application.hs  Foundation.hs  README.md  networked-sql.cabal  stack.yaml  tutorial-notes.txt  yesod-test.cabal
Handler/: Profile.hs
YesodWeb/config/: settings.yml
app/: devel.hs
config/: keter.yml
docs/: data.json  graph.html  index.html
docs/data/: airbnb.json  facebook.json  netflix.json
servant-api/: servant-api.cabal
servant-crawler/: servant-crawler.cabal
servant-crawler/app/: Main.hs
servant-crawler/src/: Crawler.hs  DatabaseAPI.hs  GitHubAPI.hs
templates/: profile.hamlet
yesod-web/: Application.hs  Foundation.hs  networked-sql.cabal  tutorial-notes.txt  yesod-web.cabal
yesod-web/Handler/: Profile.hs
yesod-web/config/: client_session_key.aes  keter.yml  test-settings.yml
yesod-web/templates/: profile.hamlet
