name:                servant-crawler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-crawler#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crawler
                     , GitHubAPI
                     , DatabaseAPI
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , github
                     , text
                     , vector
                     , hasbolt
                     , bytestring
                     , transformers
                     , containers
  default-language:    Haskell2010

executable servant-crawler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-crawler
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-crawler
